# grasp_set

./: README.md
grasp_set_skill_client/: CMakeLists.txt  package.xml
grasp_set_skill_msgs/: CMakeLists.txt  package.xml
grasp_set_skill_msgs/action/: GraspSet.action
grasp_set_skill_msgs/msg/: GraspCandidate.msg  GraspCandidateArr.msg
grasp_set_skill_scxml/: my_action_skill.scxml
grasp_set_skill_server/: CMakeLists.txt  package.xml
grasp_set_skill_server/include/grasp_set_skill_server/: grasp_set_skill_server.h
grasp_set_skill_server/include/grasp_set_skill_server/common/: verbosity_levels.h
grasp_set_skill_server/launch/: run.launch
grasp_set_skill_server/src/: grasp_set_skill_server.cpp  grasp_set_skill_server_node.cpp
grasp_set_skill_server/src/common/: verbosity_levels.cpp
grasp_set_skill_server/yaml/: config.yaml  object_0_candidates_file.yaml  object_1_candidates_file.yaml  object_2_candidates_file.yaml
