<?xml version="1.0"?>
<package>
  <name>grasp_set_skill_client</name>
  <version>0.0.0</version>
  <description>The grasp_set_skill_client package</description>

  <maintainer email="jsouza@fe.up.pt">todo</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

</package>
