<?xml version="1.0"?>
<package>
  <name>grasp_set_skill_msgs</name>
  <version>0.0.0</version>
  <description>The grasp_set_skill_msgs package</description>

  <maintainer email="jsouza@fe.up.pt">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
